--- a/docs/_includes/_doc.html
+++ b/docs/_includes/_doc.html
@@ -1,14 +1,36 @@
-<main id="site-doc">
-    <div class="doc-header">
-      <button
-        type="button"
-        class="button doc-toggle"
+<main id="site-doc" class="site-doc">
+  <div class="doc-header">
+    <button
+      id="menu-toggle"
+      type="button"
+      class="button doc-toggle"
+      title="Toggle"
+    >
+      <img
+        src="{{ 'img/sidebar-icon-open.svg' | relative_url }}"
+        alt="Toggle"
         title="Toggle"
-        onClick="toggleClasses(['#site-sidebar', '#site-doc'], ['toggled', 'expanded'])">
-          <img src="{{ site.baseurl }}/img/sidebar-icon-open.svg" alt="Toggle">
-      </button>
+      />
+    </button>
+
+    <div class="link-container">
+      <!-- {% for item in site.data.versions %}
+        {% include _dropdown.html item=item %}
+        {% endfor %} -->
+      <div class="link-item">
+        <a
+          href="https://github.com/{{ site.github-owner }}/{{ site.github-repo }}"
+          title="GitHub repo"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span class="strong">GitHub</span>
+          <span id="stars-count"></span>
+        </a>
+      </div>
     </div>
-    <div class="doc-content">
-        {{ content }}
-    </div>
+  </div>
+  <div class="doc-content">
+    {{ content }}
+  </div>
 </main>
