--- a/docs/_includes/_header.html
+++ b/docs/_includes/_header.html
@@ -3,10 +3,10 @@
         <div class="header-flex">
             <div class="header-text">
                 <h1>Compile time verification and generation <span>of documentation from <strong>Xcode Playgrounds</strong></span></h1>
-                <a class="header-button" href="{{ site.baseurl }}/docs/" title="Docs">Learn more</a>
+                <a class="header-button" href="{{ '/docs' | relative_url }}" title="Docs">Learn more</a>
             </div>
             <div class="header-image">
-                <img src="{{ site.baseurl }}/img/header-image.svg" alt="Nef logo">
+                <img src="{{ '/img/header-image.svg' | relative_url }}" title="nef logo" alt="nef logo">
             </div>
         </div>
     </div>
