--- a/docs/_includes/_sidebar.html
+++ b/docs/_includes/_sidebar.html
@@ -1,57 +1,102 @@
-<div id="site-sidebar">
-    <div class="sidebar-brand">
-        <a href="{{ site.baseurl }}/" title="{{ site.name }}">
-            <img src="{{ site.baseurl }}/img/nav-brand.svg" alt="{{ site.name }}">
-            <span>{{ site.name }}</span>
-        </a>
-        <button
-          type="button"
-          title="Close"
-          class="button sidebar-toggle"
-          onClick="toggleClass('#site-sidebar', 'toggled')">
-            <span class="close"></span>
-        </button>
-    </div>
-    <div class="sidebar-menu">
-        {% for item in site.data.sidebar.options %}
+<div id="site-sidebar" class="site-sidebar">
+  <div class="sidebar-brand">
+    <a href="{{ '/' | relative_url }}" class="brand" title="{{ site.name }}">
+      <img
+        src="{{ '/img/nav-brand-white.svg' | relative_url }}"
+        title="{{ site.name }}"
+        alt="{{ site.name }}"
+        class="brand-wrapper"
+      />
+      <span>{{ site.name }}</span>
+    </a>
+    <button
+      id="main-toggle"
+      type="button"
+      title="Close"
+      class="button sidebar-toggle"
+    >
+      <span class="close"></span>
+    </button>
+  </div>
+  <div class="sidebar-menu">
+    {% if site.data.sidebar.options %}
+      {% for item in site.data.sidebar.options %}
 
-        {% comment %}
-        <!-- Needed logic to show the submenu open when the active entry is an inner element -->
-        {% endcomment %}
-        {% assign open_submenu = '' %}
-        {% if item.nested_options %}
-          {% for nested_item in item.nested_options %}
-            {% if nested_item.url == page.url %}
-              {% assign open_submenu = 'open' %}
-            {% endif %}
-          {% endfor %}
-        {% endif %}
+      {% assign item_url = item.url | relative_url %}
+      {% assign item_url_slash = item_url | append: '/' %}
+      {% assign page_url = page.url | relative_url %}
+      {% assign page_url_index = page_url | append: 'index.html' %}
 
-        <div class="sidebar-menu-item {% if item.url == page.url or open_submenu == 'open' %}active{% endif %} {{ open_submenu }}">
-        {% if item.nested_options %}
-            <button
-              type="button"
-              title="Open {{ item.title }}"
-              class="button"
-              onClick="activateParent(event.target, 'open');">
-                {{ item.title }}
-            </button>
+      {% comment %}
+      <!-- Needed logic to show the submenu open when the active entry is an inner element -->
+      {% endcomment %}
+      {% assign open_submenu = '' %}
+      {% assign active_item = '' %}
 
-            <div class="caret"></div>
+      {% if item_url == page_url or item_url_slash == page_url or item_url == page_url_index %}
+        {% assign active_item = 'active' %}
+      {% endif %}
 
-            <div class="sub-menu">
-                {% for nested_item in item.nested_options %}
-                <a  class="sidebar-menu-item {% if nested_item.url == page.url %}active{% endif %}"
-                    href="{{ nested_item.url | relative_url }}"
-                    title="{{ nested_item.title }}">{{ nested_item.title }}</a>
-                {% endfor %}
-            </div>
+      {% if item.nested_options %}
+        {% if item_url == page_url or item_url_slash == page_url %}
+          {% assign open_submenu = 'open' %}
         {% else %}
-          <a
-            href="{{ item.url | relative_url }}"
-            title="{{ item.title }}">{{ item.title }}</a>
-        {% endif %}
-        </div>
+        {% for sub in item.nested_options %}
+          {% assign sub_url = sub.url | relative_url %}
+          {% assign sub_url_slash = sub_url | append: '/' %}
+          {% if sub_url == page_url or sub_url_slash == page_url %}
+            {% assign open_submenu = 'open' %}
+            {% assign active_item = 'active' %}
+          {% endif %}
         {% endfor %}
+      {% endif %}
+    {% endif %}
+
+    <div class="sidebar-menu-item {{ active_item }} {{ open_submenu }}">
+      {% if item.nested_options %} {% if item.url %}
+      <a
+        href="{{ item.url | relative_url }}"
+        title="{{ item.title }}"
+        class="drop-nested"
+      >
+        {{item.title}}
+      </a>
+      <div class="caret"></div>
+      {% else %}
+      <button
+        type="button"
+        title="Open {{ item.title }}"
+        class="button drop-nested"
+      >
+        {{ item.title }}
+      </button>
+      <div class="caret"></div>
+      {% endif %}
+
+      <div class="sub-menu">
+        {% for sub in item.nested_options %}
+        {% assign sub_url = sub.url | relative_url %}
+        {% assign sub_url_slash = sub_url | append: '/' %}
+        <a
+          class="{% if sub_url == page_url or sub_url_slash == page_url or sub_url == page_url_index %}active{% endif %}"
+          href="{{ sub.url | relative_url }}"
+          title="{{ sub.title }}"
+        >
+          {{ sub.title }}
+        </a>
+        {% endfor %}
+      </div>
+      {% else %}
+      <a
+        href="{{ item.url | relative_url }}"
+        class="{{ active_item }}"
+        title="{{ item.title }}"
+      >
+        {{ item.title }}
+      </a>
+      {% endif %}
     </div>
+    {% endfor %}
+    {% endif %}
+  </div>
 </div>
