--- a/docs/_sass/utils/_mixins.scss
+++ b/docs/_sass/utils/_mixins.scss
@@ -2,6 +2,27 @@
 // -----------------------------------------------
 // -----------------------------------------------
 
+// Hover
+//------------------------------------------------
+@mixin links($link, $visited, $hover, $active) {
+  & {
+    color: $link;
+
+    &:visited {
+      color: $visited;
+    }
+
+    &:hover {
+      color: $hover;
+    }
+
+    &:active,
+    &:focus {
+      color: $active;
+    }
+  }
+}
+
 // Breakpoint
 // -----------------------------------------------
 // -----------------------------------------------
