--- a/docs/_sass/base/_helpers.scss
+++ b/docs/_sass/base/_helpers.scss
@@ -2,8 +2,9 @@
 // -----------------------------------------------
 // -----------------------------------------------
 .wrapper {
-    padding: 0 ($base-point-grid * 3);
-    margin: 0 auto;
-    box-sizing: border-box;
-    max-width: $bp-xlarge;
+  padding: 0 ($base-point-grid * 3);
+  margin: 0 auto;
+  box-sizing: border-box;
+  max-width: $bp-xlarge;
+  height: 100%;
 }
