--- a/docs/_sass/base/_reset.scss
+++ b/docs/_sass/base/_reset.scss
@@ -83,13 +83,14 @@ u,
 ul,
 var,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -102,40 +103,40 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
+  line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 
 blockquote {
-    &:after,
-    &:before {
-        content: '';
-        content: none;
-    }
+  &::after,
+  &::before {
+    content: "";
+    content: none;
+  }
 }
 
 q {
-    &:after,
-    &:before {
-        content: '';
-        content: none;
-    }
+  &::after,
+  &::before {
+    content: "";
+    content: none;
+  }
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
