--- a/docs/_sass/components/_button.scss
+++ b/docs/_sass/components/_button.scss
@@ -2,12 +2,12 @@
 // ----------------------------------------------
 // ----------------------------------------------
 .button {
+  font-family: $base-font-family;
   display: block;
   background: none;
   border: none;
   outline: none;
   text-decoration: none;
-  position: relative;
 
   &:hover {
     cursor: pointer;
@@ -16,8 +16,33 @@
   > img {
     vertical-align: bottom;
   }
-}
 
+  &.link-like {
+    font-size: 1rem;
+    color: $link-color;
+    font-weight: $font-regular;
+    border: none;
+    padding: 0 0 ($base-point-grid / 2) 0;
+    margin:
+      0
+      ($base-point-grid * 2)
+      -5px
+      0;
+    text-transform: none;
+
+    &:hover,
+    &:active,
+    &:focus {
+      text-decoration: none;
+      box-shadow: 0 2px;
+      background: none;
+
+      &::after {
+        background-position-y: 60%;
+      }
+    }
+  }
+}
 
 .close {
   height: 28px;
@@ -28,12 +53,12 @@
 
   &::before,
   &::after {
-    background-color: #fff;
+    background-color: $white;
     content: " ";
     height: 100%;
     left: 98%;
     position: absolute;
-    top: 50%;
+    top: 36%;
     width: 2px;
   }
 
