--- a/docs/_sass/components/_sidebar-menu.scss
+++ b/docs/_sass/components/_sidebar-menu.scss
@@ -3,61 +3,54 @@
 // -----------------------------------------------
 
 .sidebar-menu {
+  margin-top: ($base-point-grid * 2);
+  padding: 0;
+
   .sidebar-menu-item {
     display: flex;
     flex-direction: column;
     position: relative;
 
-    &.active {
-      > a,
-      a.active {
-        box-shadow: 3px 0 $brand-tertiary inset;
-      }
+    .sub-menu {
+      background: $sidebar-active-color;
+      max-height: 0;
+      transition: max-height 0.3s ease-in-out;
+      overflow: hidden;
 
-      & > button {
-        box-shadow: 3px 0 rgba($brand-tertiary, 0.5) inset;
-      }
-    }
-
-    &.open {
       a {
-        background: rgba($brand-primary, 0.3);
-      }
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: $base-point-grid * 2 $base-point-grid * 3;
+        font-size: 0.875rem;
+        height: auto;
 
-      .caret::before {
-        top: 4px;
-        left: -6px;
-        border-top: 6px solid rgba($white, 0.8);
-        border-left: 6px solid transparent;
-        border-right: 6px solid transparent;
-      }
-
-      .caret::after {
-        left: -4px;
-        top: 4px;
-        border-top: 4px solid $brand-secondary;
-        border-left: 4px solid transparent;
-        border-right: 4px solid transparent;
-      }
-
-      .sub-menu {
-        max-height: 600px; // This will suffice for 9 entries in a submenu tops
+        &.active {
+          color: $white;
+          box-shadow: 3px 0 $brand-tertiary inset;
+        }
       }
     }
 
-    button,
-    a {
-      text-align: left;
-      padding: $base-point-grid * 2;
-      width: 100%;
-      font-size: 1rem;
+    a,
+    button {
+      box-sizing: border-box;
       font-family: $base-font-family;
+      font-size: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: $base-point-grid * 3 $base-point-grid * 2 $base-point-grid * 3 $base-point-grid * 3;
+      line-height: $base-point-grid * 2;
+      text-align: left;
+      width: 100%;
       color: $white;
+
+      @include links($white, $white, rgba($white, 0.8), $white);
+
       transition: background $base-duration $base-timing;
 
       &:hover {
-        background: rgba($brand-primary, 0.15);
-        color: $white;
         text-decoration: none;
       }
     }
@@ -65,41 +58,56 @@
     .caret {
       position: absolute;
       right: ($base-point-grid * 3);
-      top: $base-point-grid * 2;
+      top: $base-point-grid * 3;
       pointer-events: none;
+      transform-origin: 0% 75%;
+      height: 8px;
+      transition: transform 0.2s ease;
     }
 
     .caret::before {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
       border-left: 6px solid rgba($white, 0.8);
       border-top: 6px solid transparent;
       border-bottom: 6px solid transparent;
-      transition: border 0.3s ease, top 0.2s ease, left 0.2s ease;
     }
 
     .caret::after {
-      content: '';
+      content: "";
       position: absolute;
       left: 0;
       top: 2px;
       border-left: 4px solid $brand-secondary;
       border-top: 4px solid transparent;
       border-bottom: 4px solid transparent;
-      transition: border 0.3s ease, top 0.3s ease, left 0.3s ease;
     }
 
+    &.active {
+      > a,
+      button {
+        box-shadow: 3px 0 rgba($brand-tertiary, 0.5) inset;
+      }
+    }
 
-    .sub-menu {
-      max-height: 0px;
-      transition: max-height 0.6s ease-in-out;
-      overflow: hidden;
+    &.open {
+      > a,
+      button {
+        background: $sidebar-head-active-color;
+      }
 
-      a {
-        font-size: 0.875rem;
-        padding-left: (($base-point-grid * 3));
+      .caret {
+        transform: rotateZ(90deg);
+      }
+
+      .caret::after {
+        border-left-color: $sidebar-head-active-color;
+      }
+
+      .sub-menu {
+        max-height: 1600px; // This will suffice for +20 entries in a submenu tops
       }
     }
   }
