--- a/docs/_sass/utils/_variables.scss
+++ b/docs/_sass/utils/_variables.scss
@@ -2,19 +2,22 @@
 // -----------------------------------------------
 // -----------------------------------------------
 
-// Google Fonts
+// -----------------------------------------------
+// Typography
 // -----------------------------------------------
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Source+Code+Pro&display=optional');
 
-// Colors
+// Colours
 // -----------------------------------------------
 $brand-primary: rgb(108, 11, 239);
 $brand-secondary: rgb(57, 6, 125);
 $brand-tertiary: rgb(251, 176, 64);
 $gray-primary: darken($brand-secondary, 10%);
-$white: rgb(255, 255, 255);
+$white: #fff;
 $link-color: darken($brand-primary, 10%);
 $link-hover: darken($brand-primary, 15%);
+$sidebar-active-color: lighten($brand-secondary, 2%);
+$sidebar-head-active-color: lighten($brand-secondary, 4%);
 
 // Typography
 // -----------------------------------------------
@@ -62,9 +65,6 @@ $column-11: (11/12*100%);
 $column-12: (12/12*100%);
 $gutter-margin: ($base-point-grid * 4);
 
-
-
-
 // Border
 // -----------------------------------------------
-$border-color: rgba($gray-primary, 0.1);
+$border-color: rgba($gray-primary, 0.05);
