--- a/docs/extra/nef-jazzy-theme/assets/css/jazzy.css.scss
+++ b/docs/extra/nef-jazzy-theme/assets/css/jazzy.css.scss
@@ -8,8 +8,8 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600");
 
 // Colors
-$brand-primary: #ff4650;
-$brand-secondary: #ff4b2c;
+$brand-primary: #39067d;
+$brand-secondary: #fbb040;
 $gray-primary: rgb(49, 45, 44);
 $gray-primary-lighten: lighten($gray-primary, 10%);
 $white: rgb(255, 255, 255);
