update assets for microsite

--- a/docs/extra/nef-jazzy-theme/assets/css/jazzy.css.scss
+++ b/docs/extra/nef-jazzy-theme/assets/css/jazzy.css.scss
@@ -8,8 +8,8 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600");
 
 // Colors
-$brand-primary: #39067d;
-$brand-secondary: #fbb040;
+$brand-primary: #39067D;
+$brand-secondary: #6C0BEF;
 $gray-primary: rgb(49, 45, 44);
 $gray-primary-lighten: lighten($gray-primary, 10%);
 $white: rgb(255, 255, 255);
