--- a/docs/extra/nef-jazzy-theme/templates/header.mustache
+++ b/docs/extra/nef-jazzy-theme/templates/header.mustache
@@ -3,7 +3,7 @@
     <div class="header">
     <p class="header-col header-col--primary">
       <a class="header-link" href="/">
-        <img style="height: 18px;" class="header-icon" src="{{path_to_root}}img/bow-logo.png" alt="{{module_name}} Docs"/>
+        <img style="height: 18px;" class="header-icon" src="{{path_to_root}}img/nef-logo.png" alt="{{module_name}} Docs"/>
         <span class="header-title">{{module_name}}</span>
       </a>
       <span class="header-tag">{{#doc_coverage}} {{doc_coverage}}% documented{{/doc_coverage}}</span>
