update color selector in nav api-docs

--- a/docs/extra/nef-jazzy-theme/assets/css/jazzy.css.scss
+++ b/docs/extra/nef-jazzy-theme/assets/css/jazzy.css.scss
@@ -17,8 +17,7 @@ $white: rgb(255, 255, 255);
 $link-color: $brand-primary;
 $link-hover: darken($brand-primary, 4%);
 
-// Bow
-
+// nef
 $body_background: #fafafa;
 $body_font: 14px/25px "Poppins", "Open Sans", "Helvetica Neue", Helvetica,
   Arial, sans-serif;
