--- a/docs/extra/nef-jazzy-theme/templates/doc.mustache
+++ b/docs/extra/nef-jazzy-theme/templates/doc.mustache
@@ -48,7 +48,7 @@
       .nav-group-task[data-name="{{name}}"] {
         background-color: #f5f5f5;
         font-weight: bold;
-        border-left: 3px solid #f4511e;
+        border-left: 3px solid #39067D;
         padding-left: 5px
       }
     </style>
